examples/type_system/failing/109_fun_return_bool_vs_unit.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors • examples/type_system/failing/109_fun_return_bool_vs_unit.flx
// error[E300]: Return Type Mismatch
//
// The body of `bad_bool` does not match its declared return type.
//
//   examples/type_system/failing/109_fun_return_bool_vs_unit.flx:51:5
//    |
// 50 | fn bad_bool() -> Bool {
//    |                  ---- `bad_bool` was declared to return `Bool`
// 51 |     0
//    |     ^
//    |     - this expression has type `Int`
//
// Note:
//   declared return type: Bool
//   body type: Int
//
// Help:
//   Booleans are not numeric in Flux. Use `true` or `false` here.
//
//
// error[E300]: Return Type Mismatch
//
// The body of `main` does not match its declared return type.
//
//   examples/type_system/failing/109_fun_return_bool_vs_unit.flx:55:5
//    |
// 54 | fn main() -> Unit {
//    |              ---- `main` was declared to return `Unit`
// 55 |     bad_bool()
//    |     ^^^^^^^^^^
//    |     ---------- this expression has type `Bool`
//
// Note:
//   declared return type: Unit
//   body type: Bool
//
// Help:
//   Return a `Unit` value from `main` or change its annotation.
//
// Found 2 errors.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300
// expect-error: E300

fn bad_bool() -> Bool {
    0
}

fn main() -> Unit {
    bad_bool()
}
